@@ -82,7 +82,7 @@ when running with various options are
 "%9P %5a %.10l %.5D %6t %N"
 .TP
 .I "\-\-summarize"
-"%9P %5a %.10l %15F %N"
+"%9P %5a %.10l %16F %N"
 .TP
 .I "\-\-long"
 "%9P %5a %.10l %.8s %4r %5h %10g %.5D %11T %N"
