@@ -26,6 +26,7 @@ documents those changes that are of interest to users and admins.
     DB2 when killing the job.
  -- Correct logic to support ResvOverRun configuration parameter.
  -- Get --acctg-freq option working for srun and salloc commands.
+ -- Fix sinfo display of drained nodes correctly with the summarize flag.
 
 * Changes in SLURM 2.1.6-2
 ==========================
